...
        <scene sceneID="51r-UB-hjm">
            <objects>
                <viewController storyboardIdentifier="WelcomeUIViewController" title="Workout" useStoryboardIdentifierAsRestorationIdentifier="YES" id="G0j-6x-TZF" customClass="WelcomeUIViewController" customModule="Classfitter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="rTH-SZ-dfN"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N50-uR-uJm">
                                <rect key="frame" x="169" y="421.5" width="37" height="30"/>
                                <state key="normal" title="Enter"/>
                                <connections>
                                    <action selector="clickedEnter:" destination="G0j-6x-TZF" eventType="touchUpInside" id="V9Q-QF-ryw"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yk-dF-r0D" userLabel="btnSignOut">
                                <rect key="frame" x="16" y="580" width="57" height="30"/>
                                <state key="normal" title="Sign out"/>
                                <connections>
                                    <action selector="clickSignOut:" destination="G0j-6x-TZF" eventType="touchUpInside" id="khA-no-HSC"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="txtFirstName" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M6z-2T-9hk">
                                        <rect key="frame" x="0.0" y="60" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtFirstName" label="First Name"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="txtSurname" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n0Y-0b-Gnb">
                                        <rect key="frame" x="0.0" y="120" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtSurname" label="Surname"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZVI-B7-JVd">
                                        <rect key="frame" x="0.0" y="150" width="343" height="30"/>
                                        <state key="normal" title="Next"/>
                                        <connections>
                                            <action selector="clickedNext:" destination="ck3-bg-PCl" eventType="touchUpInside" id="J1u-E7-Vwr"/>
...
        <scene sceneID="Wx9-0m-6WL">
            <objects>
                <viewController storyboardIdentifier="LockerRoomUIViewController" title="Locker room" automaticallyAdjustsScrollViewInsets="NO" id="Scl-vc-vsc" customClass="LockerRoomUIViewController" customModule="Classfitter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="cTh-9c-eoi"/>
...
                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="newMessage" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jy3-Da-UP3" userLabel="txtNewMessage">
                                        <rect key="frame" x="8" y="15" width="315" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtNewMessage" label="New message text"/>
...
                                            <constraint firstAttribute="width" constant="36" id="FMl-09-64F"/>
                                        </constraints>
                                        <state key="normal" title="Send"/>
                                        <connections>
                                            <action selector="sendMessage:" destination="Scl-vc-vsc" eventType="touchUpInside" id="iPo-o7-cTA"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Locker room" id="xxU-rk-pmF">
                        <barButtonItem key="rightBarButtonItem" title="Start" id="eUR-gf-S5t">
                            <connections>
                                <action selector="startWorkoutClicked:" destination="Scl-vc-vsc" id="meW-5m-MLu"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecq-oo-Noe">
                                        <rect key="frame" x="610" y="17" width="37" height="30"/>
                                        <state key="normal" title="Done"/>
                                        <connections>
                                            <action selector="workoutComplete:" destination="HTx-nx-cZG" eventType="touchUpInside" id="SzY-aq-4Ig"/>
...
